tests/golden/type_errors/function_type_return_non_function.cd
fun make(): fun(number): number {
  return 123;
}
